# apple-toolchain-resolution-repro

./: MODULE.bazel  README.md
SimpleObjc/: BUILD.bazel  SimpleObjc.m
Sources/FooSwift/: BUILD.bazel  FooSwiftVersionInfo.swift
Sources/PrintObjcVersion/: BUILD.bazel  PrintObjcVersion.swift
Sources/PrintSwiftVersion/: BUILD.bazel  PrintSwiftVersion.swift
Sources/PrintVersion/: BUILD.bazel  PrintVersion.swift
Sources/SimpleSwift/: BUILD.bazel  VersionInfo.swift
