load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "FooSwift",
    srcs = ["FooSwiftVersionInfo.swift"],
    generates_header = True,
    module_name = "FooSwift",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//SimpleObjc",
    ],
)
