load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "PrintSwiftVersion",
    srcs = ["PrintSwiftVersion.swift"],
    module_name = "PrintSwiftVersion",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SimpleSwift",
    ],
)

build_test(
    name = "build_test",
    targets = [":PrintSwiftVersion"],
)
