load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "PrintVersion",
    srcs = ["PrintVersion.swift"],
    module_name = "PrintVersion",
    visibility = ["//visibility:public"],
    deps = [
        "//SimpleObjc",
    ],
)

build_test(
    name = "build_test",
    targets = [":PrintVersion"],
)
